crates/lutum/tests/ui/stateful_hook_impl_chain_last.stderr
error[E0050]: method `call_mut` has 4 parameters but the declaration in trait `StatefulValidateOutputHook::call_mut` has 3
  --> tests/ui/stateful_hook_impl_chain_last.rs:11:9
   |
 1 |   #[lutum::def_hook(always, chain = lutum::short_circuit)]
   |  _________________________________________________________-
 2 | | async fn validate_output(_ctx: &lutum::Lutum, output: &str) -> Result<String, String> {
   | |_________- trait requires 3 parameters
...
11 | /         &mut self,
12 | |         _ctx: &lutum::Lutum,
13 | |         args: ValidateOutputArgs,
14 | |         last: Option<Result<String, String>>,
   | |____________________________________________^ expected 3 parameters, found 4
